--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
     "swiper": "^11.1.3"
