--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.0.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
